--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <h1 class = "text-center" id = "header">CIARAN GRAVESTOCK</h1>
         </div>
         <nav class="navbar navbar-expand-md">
-          <a id = "logo" class="navbar-brand" href="index.html">
+          <a class="navbar-brand hide-big" href="index.html">
             <img src="images/logo.png" width="40" height="100%" alt="">
             <span style = "color: black;">CIARAN GRAVESTOCK</span>
           </a>
@@ -41,7 +41,7 @@
                 <a class="nav-link" href="about.html"><strong>About</strong></a>
               </li>
               <span class="nav-link-style">
-                <div class = "hide-small inline-block">
+                <div class = "hide-small inline-block-big">
                   <li class="nav-item li_dot">
                       <a class="nav-link" href="photography.html"><strong>Photography</strong></a>
                     </li>
