--- a/videography.html
+++ b/videography.html
@@ -108,15 +108,33 @@
              </a>
            </div>
          <div class = "main-container">
-            <div id = "left_frame" style="padding:25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/380348552"
-              style="position:absolute;top:0;left:0;width:100%;height:100%;"
-              frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+
+            <div class="row">
+
+              <!--Grid column-->
+              <div class="col-lg-6 col-md-12 mb-4">
+
+                <div style="padding:50% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/380348552"
+                  style="position:absolute;top:0;left:0;width:100%;height:100%;"
+                  frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                </div>
+
+              </div>
+              <!--Grid column-->
+
+              <!--Grid column-->
+              <div class="col-lg-6 col-md-12 mb-4">
+
+                <div style="padding:50% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/401885578"
+                  style="position:absolute;top:0;left:0;width:100%;height:100%;"
+                  frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                </div>
+
+              </div>
+              <!--Grid column-->
+
             </div>
-            <div id = "left_frame" style="padding:25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/401885578"
-              style="position:absolute;top:0;left:0;width:100%;height:100%;"
-              frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-            </div>
-          </div>
+         </div>
       </div>
     </body>
 </html>
