--- a/photography.html
+++ b/photography.html
@@ -95,7 +95,7 @@
           <div id = "sub-nav" class = "hide-small text-center">
             <ul class = "list-inline sub-flex">
               <li class="list-inline-item">
-                <a href="sub_nav/portrait.html"><strong>Portraiture</strong></a>
+                <a href="photography.html"><strong>Portraiture</strong></a>
               </li>
               <li class="list-inline-item">
                 <a href="sub_nav/landscape.html"><strong>Landscape</strong></a>
@@ -104,7 +104,7 @@
                 <a href="sub_nav/nature.html"><strong>Nature</strong></a>
               </li>
               <li class="list-inline-item">
-                <a href="photography.html"><strong>Widlife</strong></a>
+                <a href="sub_nav/portrait.html"><strong>Widlife</strong></a>
               </li>
             </ul>
          </div>
