--- a/sub_nav/landscape.html
+++ b/sub_nav/landscape.html
@@ -52,10 +52,10 @@
                       <strong>Photography</strong>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <a class="dropdown-item" href="portrait.html"><strong>Portraiture</strong></a>
+                      <a class="dropdown-item" href="../photography.html"><strong>Portraiture</strong></a>
                       <a class="dropdown-item" href="landscape.html"><strong>Landscape</strong></a>
                       <a class="dropdown-item" href="nature.html"><strong>Nature</strong></a>
-                      <a class="dropdown-item" href="../photography.html"><strong>Wildlife</strong></a>
+                      <a class="dropdown-item" href="wildlife.html"><strong>Wildlife</strong></a>
                     </div>
                   </li>
                 </div>
@@ -95,7 +95,7 @@
           <div id = "sub-nav" class = "hide-small text-center">
             <ul class = "list-inline sub-flex">
               <li class="list-inline-item">
-                <a href="portrait.html"><strong>Portraiture</strong></a>
+                <a href="../photography.html"><strong>Portraiture</strong></a>
               </li>
               <li class="list-inline-item">
                 <a href="landscape.html"><strong>Landscape</strong></a>
@@ -104,7 +104,7 @@
                 <a href="nature.html"><strong>Nature</strong></a>
               </li>
               <li class="list-inline-item">
-                <a href="../photography.html"><strong>Widlife</strong></a>
+                <a href="wildlife.html"><strong>Wildlife</strong></a>
               </li>
             </ul>
          </div>
